# advent-of-code

./: .gitignore  Cargo.toml  README.md
2015/: README.md  Utils.fs
2015/day1/: Cargo.toml  main.rs
2015/day10/: Cargo.toml  main.rs
2015/day12/: Cargo.toml  main.rs
2015/day14/: Cargo.toml  main.rs
2015/day15/: Cargo.toml  day15.fsx  main.rs
2015/day17/: Cargo.toml  main.rs
2015/day2/: Cargo.toml  main.rs
2015/day20/: Cargo.toml  main.rs
2015/day3/: Cargo.toml  main.rs
2015/day4/: Cargo.toml  main.rs
2015/day5/: Cargo.toml  main.rs
2015/day6/: Cargo.toml  main.rs
2015/day8/: Cargo.toml  main.rs
2015/template/: Cargo.toml  main.rs
2015/utils/: Cargo.toml
2021/: day1.fsx  day1.py  day10.fsx  day2.fsx  day2.py  day3.fsx  day3.py  day4.fsx  day5.fsx  day6.fsx  day7.fsx  day8.fsx  day9.fsx  template.fsx
2021/day1/: day1.py
2021/day2/: day2.py
2022/: Utils.fs  day1.fsx  day10.fsx  day11.fsx  day12.fsx  day13.fsx  day14.fsx  day15.fsx  day16.fsx  day17.fsx  day18.fsx  day19.fsx  day2.fsx  day21.fsx  day25.fsx  day3.fsx  day4.fsx  day5.fsx  day6.fsx  day7.fsx  day8-chatgpt.fsx  day8.fsx  day9.fsx
2023/: Array2D-ext.fs  Utils.fs  day1.fsx  day10.fsx  day11.fsx  day12.fsx  day13.fsx  day14.fsx  day15.fsx  day16.fsx  day17.fsx  day18.fsx  day19.fsx  day1a.fsx  day2.fsx  day24.fsx  day3.fsx  day4.fsx  day5.fsx  day6.fsx  day7.fsx  day8.fsx  day9.fsx
2024/day1/: Cargo.toml  main.rs
2024/day10/: Cargo.toml  main.rs
2024/day11/: Cargo.toml  main.rs
2024/day12/: Cargo.toml  main.rs
2024/day13/: Cargo.toml  main.rs
2024/day14/: Cargo.toml  (+1 more)
(+69 files in other folders)
