[workspace]
members = [
    "2015/day1",
    "2015/day2",
    "2015/day3",
    "2015/day4",
    "2015/day5",
    "2015/day6",
    "2015/day8",
    "2015/day10",
    "2015/day12",
    "2015/day14",
    "2015/day15",
    "2015/day17",
    "2015/day20",
    "2015/utils",
    "2024/day1",
    "2024/day2",
    "2024/day3",
    "2024/day4",
    "2024/day5",
    "2024/day6",
    "2024/day7",
    "2024/day8",
    "2024/day9",
    "2024/day10",
    "2024/day11",
    "2024/utils",
]
resolver = "2"
